; ModuleID = '/home/carl/AnghaBench/libevent/extr_http.c_evhttp_connection_get_peer.c'
source_filename = "/home/carl/AnghaBench/libevent/extr_http.c_evhttp_connection_get_peer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.evhttp_connection = type { i8*, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @evhttp_connection_get_peer(%struct.evhttp_connection* %0, i8** %1, i32* %2) #0 {
  %4 = alloca %struct.evhttp_connection*, align 8
  %5 = alloca i8**, align 8
  %6 = alloca i32*, align 8
  store %struct.evhttp_connection* %0, %struct.evhttp_connection** %4, align 8
  store i8** %1, i8*** %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load %struct.evhttp_connection*, %struct.evhttp_connection** %4, align 8
  %8 = getelementptr inbounds %struct.evhttp_connection, %struct.evhttp_connection* %7, i32 0, i32 0
  %9 = load i8*, i8** %8, align 8
  %10 = load i8**, i8*** %5, align 8
  store i8* %9, i8** %10, align 8
  %11 = load %struct.evhttp_connection*, %struct.evhttp_connection** %4, align 8
  %12 = getelementptr inbounds %struct.evhttp_connection, %struct.evhttp_connection* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 8
  %14 = load i32*, i32** %6, align 8
  store i32 %13, i32* %14, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
